[gd_scene load_steps=4 format=1]

[ext_resource path="res://battle/helper.gd" type="Script" id=1]
[ext_resource path="res://miscs/panel_alpha.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/normal.tres" type="DynamicFont" id=3]

[node name="Helper" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="PanelText" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 102.0
custom_styles/panel = ExtResource( 2 )

[node name="Text" type="Label" parent="PanelText"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 1008.0
margin/bottom = 86.0
custom_fonts/font = ExtResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PanelGameOver" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 67.0
custom_styles/panel = ExtResource( 2 )

[node name="TextGameOver" type="Label" parent="PanelGameOver"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 1008.0
margin/bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over T_T"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PanelWin" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 67.0
custom_styles/panel = ExtResource( 2 )

[node name="TextWin" type="Label" parent="PanelWin"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 1008.0
margin/bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "Gold and Exp received"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


